--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
             }
             
             .modal-image {
-                height: 200px; /* Smaller image height on very small screens */
+                height: 90%; /* Smaller image height on very small screens */
             }
             
             .modal-content {
@@ -1334,9 +1334,10 @@
             }
 
             .modal-close {
-                font-size: 20px;
+                font-size: 30px;
                 top: 10px;
                 right: 10px;
+                color: #333;
             }
 
             .about-text h3 {
