--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
             overflow: hidden;
             box-shadow: var(--shadow);
             transition: var(--transition), background-color 0.5s ease;
+            font-family: 'Cairo';
             /* opacity: 0; */ /* Removed as AOS will handle initial opacity */
             /* animation: fadeIn 1s ease forwards; */ /* Removed as AOS will handle animation */
             /* animation-delay: calc(var(--order) * 0.1s); */ /* Removed as AOS will handle delay */
@@ -749,6 +750,7 @@
             position: relative;
             transform: translateY(50px);
             transition: var(--transition), background-color 0.5s ease;
+            font-family: 'cairo';
         }
 
         .modal-overlay.active .modal {
@@ -774,6 +776,7 @@
             text-align: left; /* Default LTR alignment */
             color: var(--text-color); /* Ensure modal content text changes color */
             transition: color 0.5s ease;
+            font-family: 'cairo';
         }
 
         .modal-close {
@@ -782,7 +785,7 @@
             right: 15px;
             background: none;
             border: none;
-            font-size: 24px;
+            font-size: 34px;
             cursor: pointer;
             color: var(--text-color); /* Ensure close button changes color */
             transition: var(--transition), color 0.5s ease;
@@ -839,6 +842,7 @@
             font-weight: bold;
             cursor: pointer;
             transition: var(--transition);
+            font-family: 'cairo';
         }
 
         .modal-btn.primary {
@@ -1334,7 +1338,7 @@
             }
 
             .modal-close {
-                font-size: 30px;
+                font-size: 40px;
                 top: 10px;
                 right: 10px;
                 color: #333;
@@ -2183,7 +2187,7 @@
                     <h4>Features:</h4>
                     <ul>
                         <li>نيش مقاس 135 سم</li>
-                        <li>٢ دلفه ميتل اسود </li>
+                        <li>٢ ضلفه ميتل اسود </li>
                         <li>٣ رف زجاج مضئ</li>
                         <li>٦ كراسي زان احمر</li>
                         <li>تربيزه مقاس 90*170</li>
@@ -2191,8 +2195,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2228,8 +2232,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2263,8 +2267,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2298,8 +2302,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2333,8 +2337,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2368,8 +2372,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2403,8 +2407,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2438,8 +2442,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2473,8 +2477,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2508,8 +2512,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2543,8 +2547,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2578,8 +2582,8 @@
                     </ul>
                 </div>
                 <div class="modal-actions">
-                    <button class="modal-btn primary">Contact Us</button>
-                    <button class="modal-btn secondary" onclick="closeModal()">Continue Shopping</button>
+                    <button class="modal-btn primary">اتصل بنا</button>
+                    <button class="modal-btn secondary" onclick="closeModal()">عرض المزيد من المنتجات</button>
                 </div>
             </div>
         </div>
@@ -2804,7 +2808,7 @@
             const primaryButton = modalOverlay.querySelector('.modal-btn.primary');
 
             // Change button text to "Contact Us"
-            primaryButton.textContent = 'Contact Us';
+            primaryButton.textContent = 'اتصل بنا';
 
             // Change the onclick event to open WhatsApp
             // IMPORTANT: Replace '201553188286' with your actual WhatsApp phone number (including country code, no + or 00)
@@ -2824,7 +2828,7 @@
                 // Revert the primary button for each modal to its original state
                 const primaryButton = modal.querySelector('.modal-btn.primary');
                 if (primaryButton) {
-                    primaryButton.textContent = 'Contact Us'; // Set back to original text
+                    primaryButton.textContent = 'اتصل بنا'; // Set back to original text
                     primaryButton.onclick = null; // Remove the WhatsApp click handler
                     // If there was an original "Contact Us" function, you'd re-assign it here.
                     // Since the original HTML doesn't have a specific JS function for "Contact Us",
@@ -3166,6 +3170,31 @@
             // Add scroll event listener
             window.addEventListener('scroll', handleScroll);
         });
+
+        // NEW CODE FOR PROTECTION STARTS HERE
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
+
+        document.onkeydown = function(e) {
+            // Disable F12
+            if (e.keyCode == 123) {
+                return false;
+            }
+            // Disable Ctrl+Shift+I
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+                return false;
+            }
+            // Disable Ctrl+Shift+J
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+                return false;
+            }
+            // Disable Ctrl+U
+            if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+                return false;
+            }
+        };
+        // NEW CODE FOR PROTECTION ENDS HERE
     </script>
 </body>
 </html>
