--- a/index.html
+++ b/index.html
@@ -2156,7 +2156,7 @@
         </div>
         
         <div class="copyright" data-aos="fade-up" data-aos-duration="700"> <!-- Added AOS -->
-            <p id="copyright-text">&copy; 2025 Moreh Furniture. All Rights Reserved.</p>
+            <p id="copyright-text">&copy; 2023 Moreh Furniture. All Rights Reserved.</p>
         </div>
     </footer>
     
@@ -2621,8 +2621,8 @@
 
                 // About Section
                 'about-section-title': 'About Moreh - عن مريح',
-                'about-heading': 'Crafting Modern Comfort Since 2025',
-                'about-paragraph1': 'Founded in Egypt in 2025, Moreh has become synonymous with modern minimalist furniture that combines sleek design with exceptional functionality.',
+                'about-heading': 'Crafting Modern Comfort Since 2023',
+                'about-paragraph1': 'Founded in Egypt in 2023, Moreh has become synonymous with modern minimalist furniture that combines sleek design with exceptional functionality.',
                 'about-paragraph2': 'Our name "Moreh" (مريح) means "comfortable" in Arabic, reflecting our commitment to creating furniture that enhances your living space with both style and comfort, all within a coherent minimalist aesthetic.',
                 'about-paragraph3': 'Transforming spaces with stylish, comfortable, and durable furniture. Your dream home starts here ❤.',
                 'about-paragraph4': 'Shipping all over Egypt.',
@@ -2646,8 +2646,8 @@
                 'footer-contact-heading': 'Contact Us',
                 'contact-address': 'Cairo Egypt',
                 'contact-phone': '01553188286',
-                'contact-email': 'adhamshalapy@yahoo.com',
-                'copyright-text': '2025 Moreh Furniture. All Rights Reserved.'
+                'contact-email': 'morehfurniture@gmail.com',
+                'copyright-text': '2023 Moreh Furniture. All Rights Reserved.'
             },
             ar: {
                 // Header Logo
@@ -2673,8 +2673,8 @@
 
                 // About Section
                 'about-section-title': 'عن مريح - About Moreh',
-                'about-heading': 'نصنع الراحة العصرية منذ عام 2025',
-                'about-paragraph1': 'تأسست مريح في مصر عام 2025، وأصبحت مرادفًا للأثاث العصري البسيط الذي يجمع بين التصميم الأنيق والوظائف الاستثنائية.',
+                'about-heading': 'نصنع الراحة العصرية منذ عام 2023',
+                'about-paragraph1': 'تأسست مريح في مصر عام 2023، وأصبحت مرادفًا للأثاث العصري البسيط الذي يجمع بين التصميم الأنيق والوظائف الاستثنائية.',
                 'about-paragraph2': 'اسمنا "مريح" يعكس التزامنا بإنشاء أثاث يعزز مساحة معيشتك بالأناقة والراحة، كل ذلك ضمن جمالية بسيطة متماسكة.',
                 'about-paragraph3': 'نحول المساحات بأثاث أنيق ومريح ومتين. يبدأ منزل أحلامك هنا ❤.',
                 'about-paragraph4': 'الشحن متاح في جميع أنحاء مصر.',
@@ -2698,8 +2698,8 @@
                 'footer-contact-heading': 'اتصل بنا',
                 'contact-address': 'القاهرة، مصر',
                 'contact-phone': '01553188286',
-                'contact-email': 'adhamshalapy@yahoo.com',
-                'copyright-text': ' 2025 أثاث مريح. جميع الحقوق محفوظة.'
+                'contact-email': 'morehfurniture@gmail.com',
+                'copyright-text': ' 2023 أثاث مريح. جميع الحقوق محفوظة.'
             }
         };
 
