--- a/index.html
+++ b/index.html
@@ -2029,12 +2029,12 @@
         
         <div class="testimonial-grid">
             <div class="testimonial-card" style="--order: 1;" data-aos="fade-up" data-aos-delay="100" data-aos-duration="600"> <!-- Added AOS -->
-                <p class="testimonial-text">"The Moreh sectional sofa perfectly fits our modern apartment. The design is so clean, and it's surprisingly comfortable. Highly recommend!"</p>
+                <p class="testimonial-text">"حابه اشكركم جدا على المصداقية وان قلقى وخوفى طلع مش فى محله الحاجه وصلتنى احلى مما كونت متوقعه ودى شهاده حق كنت لازم اقولها ❤"</p>
                 <div class="testimonial-author">
-                    <img src="images/esraa.jpg" alt="Esraa, satisfied customer" />
+                    <img src="feedback/dody.jpg" alt="dody, satisfied customer" />
                     <div>
-                        <div class="author-name">Esraa Abd ElRahman</div>
-                        <div class="author-title">Dubai</div>
+                        <div class="author-name">Dody Mohamed</div>
+                        <div class="author-title">Alexandria</div>
                     </div>
                 </div>
             </div>
