--- a/index.html
+++ b/index.html
@@ -765,12 +765,10 @@
             justify-content: center;
         }
 
-        .carousel-image {
+        .modal-image img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            display: block;
-            transition: opacity 0.3s ease-in-out; /* Add transition for opacity */
         }
 
         .modal-content {
@@ -928,6 +926,13 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+        }
+
+        .carousel-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         .carousel-button {
@@ -2731,6 +2736,10 @@
                 document.body.style.fontFamily = "'Segoe UI', Tahoma, Geneva, Verdana, sans-serif";
             }
 
+            // Update Header Logo (no longer text, but keeping the IDs for potential future use or if text is re-introduced)
+            // document.getElementById('header-logo-english').textContent = currentTranslations['header-logo-english'];
+            // document.getElementById('header-logo-arabic').textContent = currentTranslations['header-logo-arabic'];
+
             // Update Header Navigation
             document.querySelector('nav ul li a[data-en="Home"]').textContent = currentTranslations['nav-home'];
             document.querySelector('nav ul li a[data-en="Products"]').textContent = currentTranslations['nav-products'];
@@ -2852,23 +2861,8 @@
             const images = imagesString.split(',').map(img => img.trim());
 
             if (imageIndex >= 0 && imageIndex < images.length) {
-                const newImageUrl = images[imageIndex];
-
-                // Start fade-out
-                carouselImage.style.opacity = '0';
-
-                // Preload the new image
-                const img = new Image();
-                img.onload = () => {
-                    // Once the new image is loaded, update the carousel image src
-                    carouselImage.src = newImageUrl;
-                    currentImageIndexes[modalId] = imageIndex;
-                    // Fade in the new image after a short delay to ensure the src change is registered
-                    setTimeout(() => {
-                        carouselImage.style.opacity = '1';
-                    }, 50); // Small delay to ensure CSS transition applies
-                };
-                img.src = newImageUrl; // Start loading the image
+                carouselImage.src = images[imageIndex];
+                currentImageIndexes[modalId] = imageIndex;
             }
         }
 
