--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -773,6 +771,7 @@
             width: 100%;
             height: 100%;
             overflow: hidden; /* Ensures slides are clipped */
+            direction: ltr; /* Force LTR direction for the carousel */
         }
 
         .carousel-track {
@@ -880,15 +879,32 @@
             right: 15px;
             background: none;
             border: none;
-            font-size: 34px;
+            font-size: 34px; /* This will be overridden by img size */
             cursor: pointer;
-            color: var(--text-color); /* Ensure close button changes color */
-            transition: var(--transition), color 0.5s ease;
+            color: var(--text-color); /* This will be overridden by img filter */
+            transition: var(--transition); /* Keep for hover effect */
             z-index: 10;
+            padding: 0; /* Remove padding to allow image to control size */
+        }
+
+        .modal-close img {
+            width: 18px; /* Set SVG icon size */
+            height: 18px; /* Set SVG icon size */
+            /* Dark brown color for light mode */
+            filter: invert(20%) sepia(100%) saturate(200%) hue-rotate(300deg) brightness(60%); 
+            transition: transform 0.2s ease, filter 0.5s ease; /* Smooth transition for scale and color */
+        }
+
+        .modal-close:hover img {
+            transform: scale(1.1); /* Slight scale on hover */
+        }
+
+        body.dark-mode .modal-close img {
+            filter: invert(1); /* White color for dark mode */
         }
 
         .modal-close:hover {
-            color: var(--accent-dark);
+            /* No specific hover for the button itself, as the img handles it */
         }
 
         .modal-title {
@@ -1388,10 +1404,10 @@
             }
 
             .modal-close {
-                font-size: 50px;
+                font-size: 50px; /* This will be overridden by img size */
                 top: 10px;
                 right: 10px;
-                color: #333;
+                color: #333; /* This will be overridden by img filter */
             }
 
             .about-text h3 {
@@ -1549,26 +1565,28 @@
             margin-right: 15px; /* Adjust list indent for RTL */
         }
 
-        /* Carousel buttons for RTL */
+        /* Carousel buttons for RTL - REMOVED as carousel is now LTR */
+        /*
         body.rtl .carousel-button.prev {
             left: auto;
             right: 0;
-            border-top-right-radius: 5px; /* Adjusted for RTL */
-            border-bottom-right-radius: 5px; /* Adjusted for RTL */
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
             border-top-left-radius: 0; 
             border-bottom-left-radius: 0;
-            transform: translateY(-50%) rotate(0deg); /* No rotation needed if arrows are correct */
+            transform: translateY(-50%) rotate(0deg);
         }
 
         body.rtl .carousel-button.next {
             right: auto;
             left: 0;
-            border-top-left-radius: 5px; /* Adjusted for RTL */
-            border-bottom-left-radius: 5px; /* Adjusted for RTL */
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
             border-top-right-radius: 0;
             border-bottom-right-radius: 0;
-            transform: translateY(-50%) rotate(0deg); /* No rotation needed if arrows are correct */
+            transform: translateY(-50%) rotate(0deg);
         }
+        */
 
         /* Mobile RTL adjustments */
         @media (max-width: 768px) {
@@ -2219,7 +2237,9 @@
     <!-- Product 1 Modal -->
     <div class="modal-overlay" id="product1-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2251,7 +2271,9 @@
     <!-- Product 2 Modal -->
     <div class="modal-overlay" id="product2-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2284,7 +2306,9 @@
     <!-- Product 3 Modal -->
     <div class="modal-overlay" id="product3-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2318,7 +2342,9 @@
     <!-- Product 4 Modal -->
     <div class="modal-overlay" id="product4-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2353,7 +2379,9 @@
     <!-- Product 5 Modal -->
     <div class="modal-overlay" id="product5-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2383,7 +2411,9 @@
     <!-- Product 6 Modal -->
     <div class="modal-overlay" id="product6-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2414,7 +2444,9 @@
     <!-- Product 7 Modal -->
     <div class="modal-overlay" id="product7-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2445,7 +2477,9 @@
     <!-- Product 8 Modal -->
     <div class="modal-overlay" id="product8-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2476,7 +2510,9 @@
     <!-- Product 9 Modal (New) -->
     <div class="modal-overlay" id="product9-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2507,7 +2543,9 @@
     <!-- Product 10 Modal (New) -->
     <div class="modal-overlay" id="product10-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2538,7 +2576,9 @@
     <!-- Product 11 Modal (New) -->
     <div class="modal-overlay" id="product11-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2569,7 +2609,9 @@
     <!-- Product 12 Modal (New) -->
     <div class="modal-overlay" id="product12-modal">
         <div class="modal">
-            <button class="modal-close" onclick="closeModal()">×</button>
+            <button class="modal-close" onclick="closeModal()" aria-label="Close">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Close">
+            </button>
             <div class="modal-image">
                 <!-- Carousel content will be dynamically generated here -->
             </div>
@@ -2826,7 +2868,7 @@
                 const img = document.createElement('img');
                 img.className = 'carousel-image';
                 img.alt = `Product image ${index + 1}`;
-                img.setAttribute('data-src', src); // Use data-src for lazy loading
+                img.setAttribute('data-original-src', src); // Use data-original-src to store the path
                 slide.appendChild(img);
                 carouselTrack.appendChild(slide);
             });
@@ -2944,16 +2986,18 @@
                 }
             });
 
-            // Lazy load images: load current, previous, and next images
+            // Load images: load current, previous, and next images
             const slides = state.track.children;
             for (let i = 0; i < slides.length; i++) {
                 const img = slides[i].querySelector('.carousel-image');
-                if (img && img.dataset.src) {
-                    if (i === index || i === index - 1 || i === index + 1 || 
-                        (index === 0 && i === state.totalSlides - 1) || // For first slide, load last
-                        (index === state.totalSlides - 1 && i === 0)) { // For last slide, load first
-                        img.src = img.dataset.src;
-                        img.removeAttribute('data-src'); // Remove data-src once loaded
+                // Check if the image element exists and has the data-original-src attribute
+                if (img && img.hasAttribute('data-original-src')) {
+                    // Load the image if it's the current, previous, or next slide
+                    if (i === index || i === (index - 1 + state.totalSlides) % state.totalSlides || i === (index + 1) % state.totalSlides) {
+                        img.src = img.getAttribute('data-original-src');
+                    } else {
+                        // Optionally, clear src for images far away to save memory, but keep data-original-src
+                        // img.src = ''; 
                     }
                 }
             }
